--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Brykou <brykou@gmail.com>",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.1",
     "lodash": "^4.17.4",
     "nuxt": "latest",
     "tachyons": "^4.6.1"
