--- a/data/projects.json
+++ b/data/projects.json
@@ -1,12 +1,14 @@
 [
   {
     "name": "Le chalutier",
-    "description": "",
-    "url": ""
+    "description": "Outil d'aide à la décision, permettant d'optimiser la répartition de votre portefeuille",
+    "url": "https://github.com/LaBaleineFr/Chalutier",
+    "image": "/project/chalutier.jpg"
   },
   {
     "name": "Plankton",
-    "description": "",
-    "url": ""
-  },
+    "description": "Outil de veille crypto permettant de garder un oeil sur toute l'actualité des crypto",
+    "url": "https://github.com/LaBaleineFr/Plankton",
+    "image": "/project/plankton.jpg"
+  }
 ]
