--- a/data/projects.json
+++ b/data/projects.json
@@ -1,14 +1,26 @@
 [
   {
-    "name": "Le chalutier",
-    "description": "Outil d'aide à la décision, permettant d'optimiser la répartition de votre portefeuille",
-    "url": "https://github.com/LaBaleineFr/Chalutier",
-    "image": "/project/chalutier.jpg"
+    "name": "Discord",
+    "description": "Rejoignez nous sur Discord, et venez discuter avec des passionnés de crypto monnaies",
+    "url": "https://discord.gg/mRrX3tV",
+    "image": "/project/discord.jpg"
+  },
+  {
+    "name": "Github",
+    "description": "Venez consulter le code source des projets des membres de La Baleine",
+    "url": "https://github.com/LaBaleineFr",
+    "image": "/project/github.jpg"
   },
   {
     "name": "MiningPool",
     "description": "Mining pool. Rejoignez nous pour miner facilement et efficacement.",
     "url": "/projets/mining-pool",
     "image": "/project/mining.jpg"
+  },
+  {
+    "name": "Blog",
+    "description": "Consulter les articles sur le blog de La Baleine",
+    "url": "https://medium.com/la-baleine",
+    "image": "/project/medium.jpg"
   }
 ]
