Remove unused and outdated components and update Discord

--- a/data/projects.json
+++ b/data/projects.json
@@ -2,7 +2,7 @@
   {
     "name": "Discord",
     "description": "Rejoignez nous sur Discord, et venez discuter avec des passionnés de crypto monnaies",
-    "url": "https://discord.gg/mRrX3tV",
+    "url": "https://discord.gg/tUNqsq8",
     "image": "/project/discord.jpg"
   },
   {
