--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "LaBaleine",
-  "version": "1.0.0",
+  "name": "labaleine",
+  "version": "1.1.0",
   "description": "Official webiste of La Baleine community",
   "author": "Brykou <brykou@gmail.com>",
   "private": true,
